--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://metaldetect.github.io/goit-react-hw-06-phonebook/",
   "dependencies": {
     "@emotion/styled": "^11.11.0",
+    "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
@@ -13,7 +14,9 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.10.1",
+    "react-redux": "^8.1.2",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.1",
     "web-vitals": "^2.1.3",
     "yup": "^1.2.0"
   },
